# MovieRecProject

./: .gitignore  CMakeLists.txt  Movie.hpp  MovieGenres.hpp  MovieRecommender.hpp  MovieSelector.hpp  README.md  interface.hpp  main.cpp  select_actors.hpp  select_and.hpp  select_column.hpp  select_directors.hpp  select_genre.hpp  select_year.hpp  setMovie.hpp  spreadsheet.cpp  spreadsheet.hpp  test.cpp
